add missing pictures

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <ul class='small-block-grid-1 home-latest-news'>
     <li>
        <div class='image'>
-          <a href='news/jazzing-it-measha.html'><img src='../m.www.jazz.to/sites/default/files/styles/homepage_blog/public/mb_05281.jpg?itok=pHDdfO1T' /></a>
+          <a href='news/jazzing-it-measha.html'><img src='sites/default/files/styles/homepage_blog/public/mb_05281.jpg?itok=pHDdfO1T' /></a>
        </div>
        <div class='teaser'>
          <h4 class='home-news-subtitle'><a href='news/jazzing-it-measha.html'>Jazzing it up with Measha</a></h4>
@@ -150,7 +150,7 @@
     </li>
     <li>
        <div class='image'>
-          <a href='news/jazzing-it-measha.html'><img src='../m.www.jazz.to/sites/default/files/styles/homepage_blog/public/chaka_400c831.jpg?itok=135uc6SK' /></a>
+          <a href='news/jazzing-it-measha.html'><img src='sites/default/files/styles/homepage_blog/public/chaka_400c831.jpg?itok=135uc6SK' /></a>
        </div>
        <div class='teaser'>
          <h4 class='home-news-subtitle'><a href='news/soul-sisters.html'>Soul Sisters</a></h4>
@@ -160,7 +160,7 @@
     </li>
     <li>
        <div class='image'>
-          <a href='news/trombone-shorty-discusses-new-album-and-hip-hop-influences.html'><img src='../m.www.jazz.to/sites/default/files/styles/homepage_blog/public/trombone_shortycc03.png?itok=Bz6bmTlR' /></a>
+          <a href='news/trombone-shorty-discusses-new-album-and-hip-hop-influences.html'><img src='sites/default/files/styles/homepage_blog/public/trombone_shortycc03.png?itok=Bz6bmTlR' /></a>
        </div>
        <div class='teaser'>
          <h4 class='home-news-subtitle'><a href='news/trombone-shorty-discusses-new-album-and-hip-hop-influences.html'>Trombone Shorty Discusses New Album and Hip-Hop Influences</a></h4>
@@ -176,7 +176,7 @@
       <ul class='small-block-grid-1 home-blog'>
     <li>
        <div class='image'>
-          <a href='blog/summer-brain.html'><img src='../m.www.jazz.to/sites/default/files/styles/homepage_blog/public/sunflowereed8.jpg?itok=6dOPoIRs' /></a>
+          <a href='blog/summer-brain.html'><img src='sites/default/files/styles/homepage_blog/public/sunflowereed8.jpg?itok=6dOPoIRs' /></a>
        </div>
        <div class='teaser'>
          <h4 class='home-news-subtitle'><a href='blog/summer-brain.html'>Summer brain</a></h4>
@@ -186,7 +186,7 @@
     </li>
     <li>
        <div class='image'>
-          <a href='blog/summer-brain.html'><img src='../m.www.jazz.to/sites/default/files/styles/homepage_blog/public/toronto-skyline-nightf49a.jpg?itok=ynd6DgC2' /></a>
+          <a href='blog/summer-brain.html'><img src='sites/default/files/styles/homepage_blog/public/toronto-skyline-nightf49a.jpg?itok=ynd6DgC2' /></a>
        </div>
        <div class='teaser'>
          <h4 class='home-news-subtitle'><a href='blog/and-then-suddenly-real-life.html'>And then suddenly, real life</a></h4>
@@ -196,7 +196,7 @@
     </li>
     <li>
        <div class='image'>
-          <a href='blog/benny-broads-bebop-and-more.html'><img src='../m.www.jazz.to/sites/default/files/styles/homepage_blog/public/weather-network0c81.jpg?itok=3-D3yJts' /></a>
+          <a href='blog/benny-broads-bebop-and-more.html'><img src='sites/default/files/styles/homepage_blog/public/weather-network0c81.jpg?itok=3-D3yJts' /></a>
        </div>
        <div class='teaser'>
          <h4 class='home-news-subtitle'><a href='blog/benny-broads-bebop-and-more.html'>Benny, Broads, Bebop and more</a></h4>
